Steam curator search now works

--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "@types/reactstrap": "^4.3.13",
     "bootstrap": "4.0.0-beta",
     "font-awesome": "^4.7.0",
-    "googleapis": "^21.3.0",
+    "google-client-api": "^1.0.4",
     "jquery": ">=3.0.0",
     "local-storage": "^1.4.2",
+    "moment": "^2.18.1",
     "popper.js": "^1.11.0",
     "react": "^15.6.1",
     "react-addons-css-transition-group": "^15.6.0",
