Implement Steam Curator detail pages with graphs

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-router-dom": "^4.0.7",
     "@types/reactstrap": "^4.3.13",
     "bootstrap": "4.0.0-beta",
+    "chart.js": "^2.7.0",
     "font-awesome": "^4.7.0",
     "google-client-api": "^1.0.4",
     "jquery": ">=3.0.0",
@@ -21,6 +22,7 @@
     "react": "^15.6.1",
     "react-addons-css-transition-group": "^15.6.0",
     "react-addons-transition-group": "^15.6.0",
+    "react-chartjs2": "^1.1.2",
     "react-dom": "^15.6.1",
     "react-google-login": "^2.9.3",
     "react-redux": "^5.0.6",
